--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^6",
     "i18next": "^22.0.5",
     "i18next-browser-languagedetector": "^7.0.1",
-    "next": "12.2.0",
+    "next": "^13.0.3",
+    "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.0.0",
