--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "framer-motion": "^6",
     "i18next": "^22.0.5",
     "i18next-browser-languagedetector": "^7.0.1",
-    "next": "^13.0.3",
+    "lodash": "^4.17.21",
+    "next": "^13.0.7",
     "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
