--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ GOOGLE_CLIENT_ID=282629370078-bb4aceb7bgrn3f11tlcf4nr75vlcepsa.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=http://localhost:3000
 JWT_SECRET=iG7zgirHAMCxhJ78JsjiRWyhlftPFB0O
+EMAIL_SERVER_USER=ed9ab0cc3eb308
+EMAIL_SERVER_PASSWORD=ff6524abccd443
+EMAIL_SERVER_HOST=smtp.mailtrap.io
+EMAIL_SERVER_PORT=2525
+EMAIL_FROM=noreply@example.com
+DATABASE_URL='mysql://kcqxhrkxa2u7ap72n9nv:pscale_pw_QSnoustnEmVmKimJFQONdN7rfwjjBm0ZyONPhiCqH2r@aws-sa-east-1.connect.psdb.cloud/comet?sslaccept=strict'
+SHADOW_DATABASE_URL='mysql://6wvpvhokdpbr7p3hpae3:pscale_pw_oSnhIYkiUb6S6ElJK0QyCKSixIR3wxR4g3v0BECPsgq@aws-sa-east-1.connect.psdb.cloud/comet?sslaccept=strict'
