--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11",
     "@fontsource/poppins": "^4.5.10",
     "@fontsource/rubik": "^4.5.13",
+    "@hookform/resolvers": "^2.9.10",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.7.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -23,12 +26,17 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "lodash": "^4.17.21",
     "next": "^13.0.7",
-    "next-auth": "^4.16.4",
+    "next-auth": "^4.18.6",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.0",
     "react-i18next": "^12.0.0",
     "react-icons": "^4.6.0",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "prisma": "^4.7.1"
   }
 }
