feat: add complete signin

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 GOOGLE_CLIENT_ID=282629370078-bb4aceb7bgrn3f11tlcf4nr75vlcepsa.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=MONMBuYEKRP4cQB5eNGsds7GvPnLUDKP
 JWT_SECRET=iG7zgirHAMCxhJ78JsjiRWyhlftPFB0O
 EMAIL_SERVER_USER=ed9ab0cc3eb308
 EMAIL_SERVER_PASSWORD=ff6524abccd443
