--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.1",
     "formik": "^2.2.9",
     "framer-motion": "^6",
     "i18next": "^22.0.5",
