--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ EMAIL_SERVER_PORT=2525
 EMAIL_FROM=noreply@example.com
 DATABASE_URL='mysql://kcqxhrkxa2u7ap72n9nv:pscale_pw_QSnoustnEmVmKimJFQONdN7rfwjjBm0ZyONPhiCqH2r@aws-sa-east-1.connect.psdb.cloud/comet?sslaccept=strict'
 SHADOW_DATABASE_URL='mysql://6wvpvhokdpbr7p3hpae3:pscale_pw_oSnhIYkiUb6S6ElJK0QyCKSixIR3wxR4g3v0BECPsgq@aws-sa-east-1.connect.psdb.cloud/comet?sslaccept=strict'
+MAIN_DOMAIN=localhost:3000
