--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "framer-motion": "^6",
     "i18next": "^22.0.5",
     "i18next-browser-languagedetector": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "next": "^13.0.7",
+    "next": "^13.1.1",
     "next-auth": "^4.18.6",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
@@ -38,6 +39,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.0",
     "prisma": "^4.7.1"
   }
 }
