--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.1",
+    "@cloudinary/react": "^1.7.0",
+    "@cloudinary/url-gen": "^1.8.7",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/poppins": "^4.5.10",
@@ -21,7 +23,6 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.1",
-    "formik": "^2.2.9",
     "framer-motion": "^6",
     "i18next": "^22.0.5",
     "i18next-browser-languagedetector": "^7.0.1",
