--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.41.0",
     "react-i18next": "^12.0.0",
     "react-icons": "^4.6.0",
+    "react-imask": "^6.4.3",
     "slugify": "^1.6.5",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
