--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-i18next": "^12.0.0",
     "react-icons": "^4.6.0",
     "react-imask": "^6.4.3",
+    "react-truncate": "^2.4.0",
     "slugify": "^1.6.5",
     "typescript": "4.9.3",
     "yup": "^0.32.11"
