feat: configure email

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.0",
+    "@types/nodemailer": "^6.4.7",
     "prisma": "^4.7.1"
   }
 }
