--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.1",
+    "cors": "^2.8.5",
     "framer-motion": "^6",
     "i18next": "^22.0.5",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -40,11 +41,14 @@
     "react-truncate": "^2.4.0",
     "slugify": "^1.6.5",
     "typescript": "4.9.3",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/nodemailer": "^6.4.7",
+    "@types/uuid": "^9.0.0",
     "prisma": "^4.7.1"
   }
 }
