--- a/package.json
+++ b/package.json
@@ -40,15 +40,20 @@
     "react-imask": "^6.4.3",
     "react-truncate": "^2.4.0",
     "slugify": "^1.6.5",
+    "swr": "^2.0.3",
     "typescript": "4.9.3",
     "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "prisma": "^4.7.1"
   }
 }
