--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "next": "^13.1.1",
     "next-auth": "^4.18.6",
+    "nextjs-cors": "^2.1.2",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
