--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ably-labs/react-hooks": "^2.1.0",
     "@chakra-ui/react": "^2.4.1",
     "@cloudinary/react": "^1.7.0",
     "@cloudinary/url-gen": "^1.8.7",
@@ -23,6 +24,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "ably": "^1.2.37",
     "axios": "^1.2.1",
     "cors": "^2.8.5",
     "framer-motion": "^6",
