--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.0",
+    "hostile": "^1.3.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "prisma": "^4.7.1"
