--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.7.1",
+    "@react-google-maps/api": "^2.18.1",
     "@sentry/nextjs": "^7.38.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
