--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn build"
+    }
+  },
   "dependencies": {
     "@ably-labs/react-hooks": "^2.1.0",
     "@chakra-ui/react": "^2.4.1",
@@ -58,6 +63,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.0",
     "hostile": "^1.3.3",
+    "husky": "^8.0.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "prisma": "^4.7.1"
