--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-i18next": "^12.0.0",
     "react-icons": "^4.6.0",
     "react-imask": "^6.4.3",
+    "react-markdown": "^8.0.6",
     "react-truncate": "^2.4.0",
     "slugify": "^1.6.5",
     "swr": "^2.0.3",
